# poetry-python-template

./: .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
