[tool.poetry]
name = "python-template"
version = "0.1.0"
description = "A template for my python projects, using Poetry and pre-commit"
authors = ["Daniela Flores <diflores@uc.cl>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
autopep8 = "^1.5.1"
pre-commit = "^2.2.0"
mypy = "^0.770"
isort = "^5.4.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
