[tool.poetry]
name = "python-template"
version = "0.1.0"
description = "A template for my python projects, using Poetry and pre-commit"
authors = ["Daniela Flores <diflores@uc.cl>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
autopep8 = "^1.5.1"
pre-commit = "^2.2.0"
mypy = "^0.770"
isort = "^5.4.2"
flake8-blind-except = "^0.2.0"
flake8-bugbear = "^20.11.1"
flake8-comprehensions = "^3.3.1"
flake8-debugger = "^4.0.0"
flake8-docstrings = "^1.5.0"
flake8-isort = "^4.0.0"
flake8-polyfill = "^1.0.2"
flake8-pytest = "^1.3"
flake8-quotes = "^3.2.0"
yesqa = "^1.2.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
